--- a/index.html
+++ b/index.html
@@ -43,14 +43,18 @@ label {
   display: inline-block;
   width: 70px;
   text-align: right;
-  vertical-align: top;
+  vertical-align: middle;
+}
+
+label textarea {
+  vertical-align: -50px;
 }
 
 input {
   padding: 2px;
   height: 14px;
   line-height: 14px;
-  fint-size: 14px;
+  font-size: 14px;
 }
 
 header {
@@ -59,12 +63,9 @@ header {
   text-align: left;
 }
 
-label textarea {
-  vertical-align: top;
-}
-
 textarea {
-  margin-left: -7px;
+margin-left: 70px;
+margin-top: -15px;
   padding: 2px;
 }
 
@@ -122,8 +123,7 @@ textarea {
 	<label>URL:</label><input v-model="url" placeholder="url"><br>
 	<label>Username:</label><input v-model="userid" placeholder="userIDx"><br>
 	<label>Password:</label><input v-model="pass" placeholder="password" :type="showPW ? '': 'password'"><button v-on:click="showpass">Show</button><br>
-	<label>Notes:</label>
-    <textarea cols="40" rows="5" v-model="notes" placeholder="notes"></textarea><br>
+	<label>Notes:</label><br><textarea cols="40" rows="5" v-model="notes" placeholder="notes"></textarea><br>
 	Last update:{{changed}}<br>
 	Last password change:{{pwChanged}}<br>
 	<p class="error">{{error}}</p>
