Add images directory and screenshot image.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ margin-top: -15px;
 	<label>*Title:</label><input v-model="title" placeholder="title"><br>
 	<label>URL:</label><input v-model="url" placeholder="url"><br>
 	<label>Username:</label><input v-model="userid" placeholder="userIDx"><br>
-	<label>Password:</label><input v-model="password" placeholder="password" :type="showPW ? '': 'password'"><img src="eye.png" v-on:click="showpass"></img><br>
+	<label>Password:</label><input v-model="password" placeholder="password" :type="showPW ? '': 'password'"><img src="images/eye.png" v-on:click="showpass"></img><br>
 	<label>Notes:</label><br><textarea cols="40" rows="5" v-model="notes" placeholder="notes"></textarea><br>
 	Last update: {{changed}}<br>
 	Last password change: {{pwChanged}}<br>
