--- a/index.html
+++ b/index.html
@@ -130,13 +130,15 @@ margin-top: -15px;
 	<label>Notes:</label><br><textarea cols="40" rows="5" v-model="notes" placeholder="notes"></textarea><br>
 	Last update: {{changed}}<br>
 	Last password change: {{pwChanged}}<br>
-	<p class="error">{{error}}</p>
 	<button v-on:click="clearfields">Clear fields</button>
 	<button v-if="keystate() === 'update'" v-on:click="update">Update</button>
 	<button v-if="keystate() === 'overwrite'" v-on:click="update">Overwrite existing!</button>
-	<button v-if="keystate() === 'new'" v-on:click="addnew">Add New</button><br>
-<!--	<button v-if="isDeleteable()" v-on:click="delete">Delete</button><br>
--->
+	<button v-if="keystate() === 'new'" v-on:click="addnew">Add New</button>
+	<confirm @confirm="deleteentry" @cancel="cancel" text="Delete entry?">
+	  <button v-if="isDeleteable()">Delete</button>
+	</confirm>
+	<br>
+	<p class="error">{{error}}</p>
       </form>
     </article>
   </div>
