Stop bad practice of overwriting component properties.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ margin-top: -15px;
 <script type="text/x-template" id="app-template">
   <authentication v-if="(flow == 'auth')" v-on:auth-done="authComplete">
   </authentication>
-  <pwmgr v-else :groups="pwgroups"> 
+  <pwmgr v-else> 
   </pwmgr>
 </script>
 
