--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Vault Password Manager</title>
-  <script src="https://unpkg.com/vue"></script>
+  <!-- <script src="https://unpkg.com/vue"></script> -->
+  <script src="vue"></script>
   <style>
 body {
   font-family: Menlo, Consolas, monospace;
@@ -14,15 +15,15 @@ body {
 .collection {
   cursor: pointer;
 }
-.bold {
-  font-weight: bold;
-}
 .collectionname {
   color: Navy;
   font-family: serif;
   font-weight: bold;
   font-style: italic;
   text-decoration: underline;
+}
+.groupname {
+  font-weight: bold;
 }
 ul {
   padding-left: 1em;
@@ -103,10 +104,10 @@ margin-top: -15px;
 <!-- group template -->
 <script type="text/x-template" id="group-template">
   <div>
-    <div class="bold" @click="toggle">{{model.name}}</div>
+    <div class="groupname" @click="toggle">{{model.name}}</div>
     <ul v-show="open">
       <div v-for="entry in model.entries">
-        <li @click="displayItem(model.name + entry)">{{entry}}</li>
+        <li class="itemname" @click="displayItem(model.name + entry)">{{entry}}</li>
       </div>
     </ul>
   </div>
