Update internal documentation. New screeshot.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ margin-top: -15px;
   </div>
 </script>
 
+<!-- Main page / form template -->
 <script type="text/x-template" id="pwmgr-template">
   <div class="container" >
     <nav>
