--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ margin-top: -15px;
 </header>
 <application id="demo"></application>
 
+<script src="config.js"></script>
 <script src="pwmgr.js"></script>
 </body>
 </html>
