--- a/www/index.html
+++ b/www/index.html
@@ -191,7 +191,7 @@ margin-top: -15px;
 </header>
 <application id="demo"></application>
 
-<script src="config.js"></script>
+<script src="config/config.js"></script>
 <script src="pwmgr.js"></script>
 </body>
 </html>
